--- a/test/fixtures/line_items.yml
+++ b/test/fixtures/line_items.yml
@@ -8,14 +8,16 @@
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #  quantity   :integer          default(1)
+#  order_id   :integer
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  product_id: 
-  cart_id: 
+  product_id: ruby
+  cart: one
+  order: one
 
 two:
-  product_id: 
-  cart_id: 
+  product_id: ruby
+  cart: one
